src/admin/enhancer/style.scss
@import "../../base-tailwind.css";
@source "../enhancer/**/*.{ts,tsx,js,jsx,php,html}";

.components-modal__screen-overlay {
	z-index: 160000;
}
.ai-enhancer-preview-modal {
	border-radius: 3px;
	width: 100%;
	max-width: 1000px;
	height: auto;
	max-height: 90vh;

	.components-modal__content {
		padding: 0;
		margin: 0;
	}
}

